# PrismRag

./: .gitignore  AGENTS.md  CLAUDE.md  README.en.md  README.md  README_CN.md  benchmark_results.md  profile.json  pyproject.toml  run_mcp_tool.py
.prismrag/: .gitignore
demo/: prismrag-self-graph.html
docs/: AGENT_GUIDE.md  ARCHITECTURE.en.md  ARCHITECTURE.md  FEDERATED_GRAPH_DESIGN.md  MCP_TOOLS.md  PrismRag-Design-Overview.pptx  PrismRag-设计概览.pptx  benchmark-evaluation-system.md  generate_design_pptx.py  graphrag-comparison.md  multi-granularity-algorithm.md  multi-granularity-knot-architecture.md  v6.0-atomization-plan.md  v6.0-design.md  v6.0-implementation-plan.en.md  v6.0-implementation-plan.md  v7.0-design.en.md  v7.0-design.md  v7.0-implementation-plan.en.md  v7.0-implementation-plan.md
docs/archive/: ARCHITECTURE-v4.0.md
docs/history/: KNOW-000032-multimodal-embedding.md  Obsidian多模态RAG系统架构设计-v3.2.md  PrismRag Multimodal Embedding — 设计方向与路线图.md  PrismRag v5.0 — ParseTree & StorageBackend 架构设计.md  PrismRag v5.0 — 详细设计与任务分解.md  PrismRag v5.0 — 通用图引擎架构设计.md  PrismRag v5.1 — mentions_symbol 跨命名空间链接设计.md  PrismRag v5.2 — EdgeClassifier 跨边分类与 inbox 工作流.md  PrismRag v5.3 — Vault Phase 2、atomize_document 与 Embedding 增强.md  PrismRag v5.4 — Atomize 体验精打磨.md  PrismRag v5.5 — Atomize 语义去重设计.md  PrismRag v5.6 — Graph Visualization.md  PrismRag v5.7 — ingest-project 统一 ingest.md  PrismRag-Jei整合路线图.md  project-version-history.md
docs/superpowers/plans/: 2026-04-13-cross-namespace-traversal.md  2026-04-13-embedding-bridges.md  2026-04-13-federated-multi-graph.md  2026-04-18-prismrag-step1-completion.md  2026-05-05-prismrag-v5.3-sprint-a-embedding.md  2026-05-05-prismrag-v5.3-sprint-b-vault-phase2.md  2026-05-05-prismrag-v5.3-sprint-c-atomize.md  2026-05-05-v5.2-edge-classifier.md  2026-05-09-v5.3-sprint-a-embedding.md
docs/superpowers/specs/: 2026-04-13-cross-namespace-traversal-design.md  2026-04-13-embedding-bridges-design.md  2026-04-18-prismrag-step1-completion-design.md  2026-05-11-v5.3-issues-and-lessons.md  2026-05-12-prismrag-v5.4-atomize-polish-design.md  2026-05-16-prismrag-v5.5-atomize-dedup-design.md
prism_rag/: __init__.py  cli.py  cli_atomize.py  cli_benchmark.py  config.py
prism_rag/cluster/: __init__.py  leiden.py
prism_rag/inbox/: approval.py  store.py  tui.py
prism_rag/ingest/: __init__.py  ast_extractor.py  atomize.py  base_parser.py  base_tree.py  code_parser.py  dedup_log.py  drift.py  edge_classifier.py  embedder.py  incremental.py  label_resolver.py  media_extractor.py  mock_embedder.py  nimbus_parser.py  obsidian_parser.py  parse_result.py  similarity_linker.py  symbol_linker.py  vault_loader.py
prism_rag/ingest/splitters/: __init__.py  base.py  fixed_window.py  gleanings.py  llm.py  paragraph.py  registry.py  sentence.py
prism_rag/ingest/splitters/benchmark/: __init__.py  dataset.py  datasets.py  downstream.py  harness.py  hotpotqa.py  multi_granularity.py  ppr_retrieval.py  propositionizer.py  scoring.py
prism_rag/mcp_server/: __init__.py  server.py  vault_tools.py
prism_rag/report/: __init__.py  canvas_export.py  community_report.py  federation_map.py  graph_report.py  visualize.py
prism_rag/retrieve/: __init__.py  bfs.py  dfs.py  entry.py  global_ask.py  hybrid.py  impact.py
prism_rag/sources/: __init__.py  base.py  code_source.py  docs_source.py  knot_loader.py  memory_source.py
prism_rag/store/: __init__.py  backend.py  bm25_index.py  cross_namespace_probe.py  embedding_store.py  federated.py  graph.py  networkx_backend.py  registry.py
prism_rag/utils/: io.py
prism_rag/vault_ops/: audit_log.py  cas.py  errors.py  markdown_ops.py  vault.py
scripts/: run_downstream_eval.py  run_entity_grouping_eval.py  run_hotpotqa_eval.py  run_llm_benchmark.py  run_multi_granularity_eval.py
tests/: test_atomic_write.py  test_atomize_apply.py  test_atomize_cli.py  test_atomize_comprehensive.py  test_atomize_propose.py  test_atomize_resume.py  test_atomize_scan.py  test_benchmark_harness.py  test_classifier_profiles.py  test_cli.py  test_code_parser.py  test_community_reports.py  test_cross_namespace_probe.py  test_downstream_eval.py  test_drift_knot_status.py  test_e2e_full.py  test_edge_classifier.py  test_edge_confidence.py  test_embed_cache.py  test_embed_config.py  test_embed_status.py  test_embedder_ollama.py  test_embedding_store.py  test_entity_grouping.py  test_federated.py  test_fixed_window_splitter.py  test_gleanings_splitter.py  test_gpu_detection.py  test_hotpotqa_ppr.py  test_hybrid_search.py  test_impact.py  test_inbox_approval.py  test_inbox_cli.py  test_inbox_store.py  test_inbox_tui.py  test_jei_v54_smoke.py  test_knowledge_id_branch.py  test_knowledge_mcp_tools.py  test_knowledge_node_field.py  test_lifecycle_class.py  (+27 more)
