[project]
name = "prism-rag"
version = "0.0.1"
description = "无垠智穹多模态 RAG 系统 — 从 NimbusVault 抽取知识，通过 MCP Server 提供跨模态语义检索"
authors = [{ name = "Zengyn42", email = "hani@wuyin.ai" }]
license = { text = "Proprietary" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["rag", "obsidian", "lancedb", "gemini", "mcp", "multimodal"]

dependencies = [
    # Embedding: Gemini Embedding 2 (multi-modal, 2026.3.10 release)
    "google-genai>=0.3.0",
    # Storage: LanceDB (embedded, unified chunks/atoms/relations)
    "lancedb>=0.15.0",
    "pyarrow>=16.0",
    # MCP Server protocol
    "mcp>=1.0.0",
    # Obsidian vault parsing
    "python-frontmatter>=1.1.0",
    # Chunking: token counting
    "tiktoken>=0.8.0",
    # Config / validation
    "pydantic>=2.8.0",
    "pydantic-settings>=2.5.0",
    # CLI
    "typer>=0.12.0",
    # Logging
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

# Phase 2: GraphRAG dependencies (Leiden community detection, cross-encoder re-ranking)
graph = [
    "networkx>=3.3",
    "python-louvain>=0.16",
    "sentence-transformers>=3.0",
]

[project.scripts]
prism-rag = "prism_rag.cli:app"

[project.urls]
Homepage = "https://github.com/Zengyn42/PrismRag"
"Design Doc" = "https://github.com/Zengyn42/NimbusVault/blob/master/knowledge/Obsidian多模态RAG系统架构设计.md"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prism_rag"]

# ── Ruff ──────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]  # line length (handled by formatter)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Mypy ──────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

# ── Pytest ────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers"
