[project]
name = "prism-rag"
version = "0.0.1"
description = "无垠智穹图优先 RAG 系统 — Obsidian 知识图谱构建、Leiden 社区发现、MCP Server 检索接口"
authors = [{ name = "Zengyn42", email = "hani@zengyn42.ai" }]
license = { text = "Proprietary" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["rag", "obsidian", "knowledge-graph", "graphrag", "leiden", "gemini", "mcp"]

dependencies = [
    # ── Graph (core storage + traversal) ─────────────────────────────
    "networkx>=3.3",
    # Leiden community detection (canonical implementation)
    "leidenalg>=0.10.2",
    "python-igraph>=0.11.5",

    # ── Embedding (INDEX-time only: global similarity edges + multimodal bridge) ─
    # NOT used for query-time retrieval — that's pure graph traversal.
    "google-genai>=0.3.0",
    # LanceDB as embedding cache only (not primary store)
    "lancedb>=0.15.0",
    "pyarrow>=16.0",

    # ── MCP Server ───────────────────────────────────────────────────
    "mcp>=1.0.0",

    # ── Obsidian vault parsing ───────────────────────────────────────
    "python-frontmatter>=1.1.0",
    # PDF parsing (Pass 2 media extraction — required for core ingest)
    "pypdf>=5.0",
    # Markdown AST (wikilinks / callouts / block refs extraction)
    "markdown-it-py>=3.0",

    # ── Hybrid search (BM25 keyword index) ──────────────────────────
    "rank-bm25>=1.9",
    # Chinese tokenization for BM25 (optional at import time, graceful fallback)
    "jieba>=0.42",

    # ── Token counting (chunker + query budget) ──────────────────────
    "tiktoken>=0.8.0",

    # ── Config / validation ──────────────────────────────────────────
    "pydantic>=2.8.0",
    "pydantic-settings>=2.5.0",

    # ── CLI ──────────────────────────────────────────────────────────
    "typer>=0.12.0",
    # ── TUI (inbox review) ──────────────────────────────────────────
    "textual>=0.50",

    # ── Logging ──────────────────────────────────────────────────────
    "structlog>=24.0",
]

[project.optional-dependencies]
# Code repository parsing (code:: namespace)
code = [
    "tree-sitter>=0.24",
    "tree-sitter-python>=0.23",
]

# Multimodal ingestion: images / PDFs / audio → text nodes
media = [
    "pillow>=10.0",
    "faster-whisper>=1.0",
]

# Visualization: interactive HTML graph
viz = [
    "pyvis>=0.3.2",
]

dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
prism-rag = "prism_rag.cli:app"

[project.urls]
Homepage = "https://github.com/Zengyn42/PrismRag"
"Design Doc" = "https://github.com/Zengyn42/NimbusVault/blob/master/knowledge/PrismRag-v4.0-设计文档.md"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prism_rag"]

# ── Ruff ──────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Mypy ──────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

# ── Pytest ────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers"
